--- a/doc/agile/v1/sprint_backlog_09.org
+++ b/doc/agile/v1/sprint_backlog_09.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-03 Wed 10:44]
+#+CAPTION: Clock summary at [2018-10-03 Wed 16:22]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *3:30* |      |      |   0.0 |
+| *Total time*                                                                | *7:54* |      |      |   0.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 3:30   |      |      |   0.0 |
-| Active                                                                      |        | 3:30 |      |   0.0 |
+| Stories                                                                     | 7:54   |      |      |   0.0 |
+| Active                                                                      |        | 7:54 |      |   0.0 |
 | Edit release notes for previous sprint                                      |        |      | 1:30 |   0.0 |
 | Update readme to reflect org move                                           |        |      | 1:58 |   0.0 |
-| Create project for C# test model                                            |        |      | 0:02 |   0.0 |
+| Create project for C# test model                                            |        |      | 4:26 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -119,13 +119,71 @@ build time. Things to try:
 - remove all of the hashing etc for the types we don't need to hash.
 - get rid of the warnings for boost.
 
-*** STARTED Create project for C# test model                          :story:
+*** COMPLETED Create project for C# test model                        :story:
+    CLOSED: [2018-10-03 Wed 16:18]
     :LOGBOOK:
+    CLOCK: [2018-10-03 Wed 15:46]--[2018-10-03 Wed 16:18] =>  0:32
+    CLOCK: [2018-10-03 Wed 15:40]--[2018-10-03 Wed 15:45] =>  0:05
+    CLOCK: [2018-10-03 Wed 12:45]--[2018-10-03 Wed 14:59] =>  2:14
+    CLOCK: [2018-10-03 Wed 10:45]--[2018-10-03 Wed 12:18] =>  2:20
     CLOCK: [2018-10-03 Wed 10:42]--[2018-10-03 Wed 10:44] =>  0:02
     :END:
 
 We need to create a separate repo for the C# test model. This also
 means we need to generate the LAM model in two different locations.
+
+*** Create project for C++ test model                                 :story:
+
+Create a separate repo for the C++ test model.
+
+*** Remove test models from dogen project                             :story:
+
+Once we have created projects for both C# and C++, we need to delete
+all references to test models:
+
+- delete source code from projects;
+- delete test data sets;
+- remove environment variables (WITH_CSHARP, WITH_CPP etc);
+- comment out generation tests for now (JSON and Dia).
+
+*** Add basic "diff mode"                                             :story:
+
+We need a very simple way of checking all generated files in memory
+against what's in the file system and returning a flag if they are
+different. We can then use these flags to determine if tests pass. In
+the future we can extend this approach to include a proper diff of the
+files, but for now we just need a reliable way to run system tests
+again.
+
+*** Incorrect generation when changing external modules               :story:
+
+When fixing the C# projects, we updated the external modules, from
+=dogen::test_models= to =CSharpRefImpl=. Regenerating the model
+resulted in updated project files but the rest of the code did not
+change. It worked by using =-f=. It should have worked without forcing
+the write.
+
+*** Code coverage does not work for C#                                :story:
+
+It seems that using NUnit and OpenCov does not work. The main reason
+appears to be the use of shadow copying, which is no longer optional
+on NUnit 3.
+
+Links:
+
+- https://github.com/Ullink/gradle-opencover-plugin/issues/1
+- https://github.com/codecov/example-csharp/blob/master/appveyor.yml
+- https://www.appveyor.com/blog/2017/03/17/codecov/
+
+*** Add project documentation                                         :story:
+
+We should be able to create a simple set of docs following on from the
+[[https://ned14.github.io/outcome/][outcome project]]. They seem to be using Hugo.
+
+Links:
+
+- https://github.com/foonathan/standardese
+- https://github.com/ned14/outcome/tree/develop/doc/src
 
 *** Create the =generation= model                                     :story:
 
